--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -70,11 +70,11 @@
                                               Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"
                                               Foreground="{DynamicResource PrimaryColorTheme}" Background="Transparent" BorderThickness="0"
                                               Visibility="{TemplateBinding assistant:PasswordBoxAssistant.IsShowIcon,Converter={toolsConverters:BooleanToVisibilityConverter}}"/>
-                                <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear"
+                                <Button x:Name="PART_ClearButton" Effect="{x:Null}" 
                                         Style="{DynamicResource ButtonTransparentIconStyle}"
                                         attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth,Converter={toolsConverters:ValueTranslateConverter},ConverterParameter=0.7}"
                                         attached:FrameworkElementBaseAttached.IconHeight="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight,Converter={toolsConverters:ValueTranslateConverter},ConverterParameter=0.7}"
-                                        attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
+                                        attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseCircleGeometry}"
                                         Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"
                                         Foreground="{DynamicResource PrimaryColorTheme}" Background="Transparent" BorderThickness="0">
                                     <Button.Visibility>
@@ -91,14 +91,13 @@
                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self},Path=(assistant:PasswordBoxAssistant.Password),Converter={toolsConverters:ValueIsEmptyOrNullConverter}}" Value="False">
                             <Setter Property="Visibility" Value="Collapsed" TargetName="PART_PlaceHolder"/>
                         </DataTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="Validation.HasError" Value="True"/>
-                                <Condition Property="IsFocused" Value="True"/>
-                            </MultiTrigger.Conditions>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="Validation.HasError" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource FieldValidationErrorBrush}" />
-                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=BorderThickness.Left,Converter={commonConverters:DoubleToThickness},ConverterParameter=1.2}" TargetName="RootBorder"/>
-                        </MultiTrigger>
+                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=BorderThickness.Left,Converter={commonConverters:DoubleToThickness},ConverterParameter=1.5}" TargetName="RootBorder"/>
+                        </Trigger>
                         <Trigger Property="IsChecked" Value="True" SourceName="PART_Icon">
                             <Setter Property="assistant:PasswordBoxAssistant.IsShowPassword" Value="True"/>
                             <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{DynamicResource EyeGeometry}" TargetName="PART_Icon"/>
@@ -110,8 +109,10 @@
                             <Setter Property="assistant:PasswordBoxAssistant.Password" Value="123" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Background" TargetName="RootBorder" Value="{StaticResource {x:Static SystemColors.ControlBrushKey}}"/>
-                            <Setter Property="Foreground" Value="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}"/>
+                            <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}"/>
+                            <Setter Property="attached:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource AssistantForeground}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
