--- a/TestDemo/Demos/PasswordBoxDemo.xaml
+++ b/TestDemo/Demos/PasswordBoxDemo.xaml
@@ -46,6 +46,9 @@
                 <Button Content="验证密码" Width="100" Height="34" Margin="30,0"
                         pc:ButtonBaseAttached.IsShowRipple="True"
                         Click="Button2_Click"/>
+
+                <PasswordBox Width="300" Height="35" ToolTip="DefaultPasswordBox" IsEnabled="False"
+                             Style="{StaticResource DefaultPasswordBoxStyle}" Foreground="Red"/>
             </WrapPanel>
         </StackPanel>
     </ScrollViewer>
